--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+<!-- <app-materialize></app-materialize> -->
+<!-- <app-bootstrap></app-bootstrap> -->
+<!-- <app-exemplo-component></app-exemplo-component> -->
+<app-menu></app-menu>
